--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,12 +36,14 @@ xdg = "2.1.*"
 yaml-rust = "0.4.*"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+log = { version = "0.4", features = ["release_max_level_warn"] }
+git2 = "0.13"
 
 [target.'cfg(unix)'.dependencies]
 users = "0.11.*"
 
 [target.'cfg(windows)'.dependencies]
-winapi = {version = "0.3.*", features = ["aclapi", "accctrl", "winnt", "winerror", "securitybaseapi", "winbase"]}
+winapi = { version = "0.3.*", features = ["aclapi", "accctrl", "winnt", "winerror", "securitybaseapi", "winbase"] }
 
 [dependencies.clap]
 features = ["suggestions", "color", "wrap_help"]
